--- a/dotnetbackend-main/MobyLabWebProgramming.Backend/appsettings.json
+++ b/dotnetbackend-main/MobyLabWebProgramming.Backend/appsettings.json
@@ -9,7 +9,7 @@
   "JwtConfiguration": {
     "Key": "SecretKey00000000000000000000000",
     "Issuer": "https://my.app",
-    "Audience": "https://my.app"
+    "Audience": "https://my.app",
   },
   "ConnectionStrings": { // here ussually all database connection strings are set.
     "WebAppDatabase": "Server=localhost;Port=5432;Database=mobylab-app;User Id=mobylab-app;Password=mobylab-app;"
